--- a/Responsive Web Design Certification/Exercices/Learn CSS Colors by Building a Set of Colored Markers/css/style.css
+++ b/Responsive Web Design Certification/Exercices/Learn CSS Colors by Building a Set of Colored Markers/css/style.css
@@ -14,6 +14,11 @@ h1 {
   margin: 10px auto;
 }
 
+.sleeve {
+  width: 110px;
+  height: 25px;
+}
+
 .red {
   background: linear-gradient(
     rgb(122, 74, 14),
