--- a/Responsive Web Design Certification/Exercices/Learn CSS Colors by Building a Set of Colored Markers/css/style.css
+++ b/Responsive Web Design Certification/Exercices/Learn CSS Colors by Building a Set of Colored Markers/css/style.css
@@ -21,6 +21,11 @@ h1 {
   opacity: 50%;
 }
 
+.cap {
+  width: 60px;
+  height: 25px;
+}
+
 .red {
   background: linear-gradient(
     rgb(122, 74, 14),
