--- a/Responsive Web Design Certification/Exercices/Learn CSS Colors by Building a Set of Colored Markers/css/style.css
+++ b/Responsive Web Design Certification/Exercices/Learn CSS Colors by Building a Set of Colored Markers/css/style.css
@@ -26,6 +26,11 @@ h1 {
   height: 25px;
 }
 
+.cap,
+.sleeve {
+  display: inline-block;
+}
+
 .red {
   background: linear-gradient(
     rgb(122, 74, 14),
