--- a/Responsive Web Design Certification/Exercices/Learn CSS Colors by Building a Set of Colored Markers/css/style.css
+++ b/Responsive Web Design Certification/Exercices/Learn CSS Colors by Building a Set of Colored Markers/css/style.css
@@ -19,7 +19,7 @@ h1 {
   height: 25px;
   background-color: rgba(255, 255, 255, 0.5);
   opacity: 50%;
-  border-left: 10px solid black;
+  border-left: 10px double black;
 }
 
 .cap {
