--- a/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/css/style.css
+++ b/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/css/style.css
@@ -12,6 +12,12 @@ p {
   margin: 1em auto;
   text-align: center;
 }
+form {
+  margin: 0 auto;
+  min-width: 300px;
+  max-width: 500px;
+  width: 60vw;
+}
 label {
   display: block;
   margin: 0.5rem 0;
