--- a/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/css/style.css
+++ b/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/css/style.css
@@ -18,6 +18,12 @@ form {
   max-width: 500px;
   width: 60vw;
 }
+fieldset {
+  border: none;
+  padding: 2rem;
+  padding-left: 0;
+  padding-right: 0;
+}
 label {
   display: block;
   margin: 0.5rem 0;
