--- a/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/css/style.css
+++ b/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/css/style.css
@@ -23,6 +23,7 @@ fieldset {
   padding: 2rem;
   padding-left: 0;
   padding-right: 0;
+  border-bottom: 3px solid #3b3b4f;
 }
 label {
   display: block;
