--- a/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/css/style.css
+++ b/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/css/style.css
@@ -25,6 +25,9 @@ fieldset {
   padding-right: 0;
   border-bottom: 3px solid #3b3b4f;
 }
+fieldset:last-of-type {
+  border-bottom: none;
+}
 label {
   display: block;
   margin: 0.5rem 0;
