--- a/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/css/style.css
+++ b/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/css/style.css
@@ -40,8 +40,6 @@ select {
 }
 .inline {
   width: unset;
-  margin-right: 0.5em;
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-left: 0;
+  margin: 0 0.5em 0 0;
+  vertical-align: middle;
 }
