--- a/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/css/style.css
+++ b/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/css/style.css
@@ -54,7 +54,8 @@ textarea {
 input[type="submit"] {
   display: block;
   width: 60%;
-  margin: 0 auto;
+  min-width: 300px;
+  margin: 1em auto;
   height: 2em;
   font-size: 1.1rem;
   background-color: #3b3b4f;
