--- a/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/css/style.css
+++ b/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/css/style.css
@@ -13,10 +13,11 @@ p {
   text-align: center;
 }
 form {
-  margin: 0 auto;
-  min-width: 300px;
-  max-width: 500px;
   width: 60vw;
+  max-width: 500px;
+  min-width: 300px;
+  margin: 0 auto;
+  padding: 2em;
 }
 fieldset {
   border: none;
