--- a/Responsive Web Design Certification/Exercices/Learn the CSS Box Model by Building a Rothko Painting/css/style.css
+++ b/Responsive Web Design Certification/Exercices/Learn the CSS Box Model by Building a Rothko Painting/css/style.css
@@ -22,3 +22,9 @@
   background-color: #8f0401;
   margin: auto;
 }
+.three {
+  width: 91%;
+  height: 200px;
+  background-color: #8f0401;
+  margin: auto;
+}
