--- a/Responsive Web Design Certification/Exercices/Learn the CSS Box Model by Building a Rothko Painting/css/style.css
+++ b/Responsive Web Design Certification/Exercices/Learn the CSS Box Model by Building a Rothko Painting/css/style.css
@@ -22,6 +22,7 @@
   width: 475px;
   height: 200px;
   background-color: #8f0401;
+  box-shadow: 0 0 3px 3px #8f0401;
   margin: 0 auto 20px;
 }
 .three {
