--- a/Responsive Web Design Certification/Exercices/Learn the CSS Box Model by Building a Rothko Painting/css/style.css
+++ b/Responsive Web Design Certification/Exercices/Learn the CSS Box Model by Building a Rothko Painting/css/style.css
@@ -29,6 +29,7 @@
   width: 91%;
   height: 28%;
   background-color: #b20403;
+  box-shadow: 0 0 5px 5px #b20403;
   margin: auto;
   filter: blur(2px);
 }
