--- a/Responsive Web Design Certification/Exercices/Learn the CSS Box Model by Building a Rothko Painting/css/style.css
+++ b/Responsive Web Design Certification/Exercices/Learn the CSS Box Model by Building a Rothko Painting/css/style.css
@@ -25,6 +25,10 @@
   background-color: #8f0401;
   box-shadow: 0 0 3px 3px #8f0401;
   margin: 0 auto 20px;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 8px;
 }
 .three {
   width: 91%;
