--- a/Responsive Web Design Certification/Exercices/Learn the CSS Box Model by Building a Rothko Painting/css/style.css
+++ b/Responsive Web Design Certification/Exercices/Learn the CSS Box Model by Building a Rothko Painting/css/style.css
@@ -35,6 +35,10 @@
   height: 28%;
   background-color: #b20403;
   box-shadow: 0 0 5px 5px #b20403;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 25px;
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 60px;
   margin: auto;
   filter: blur(2px);
 }
