--- a/Responsive Web Design Certification/Exercices/Learn the CSS Box Model by Building a Rothko Painting/css/style.css
+++ b/Responsive Web Design Certification/Exercices/Learn the CSS Box Model by Building a Rothko Painting/css/style.css
@@ -30,6 +30,7 @@
   border-top-right-radius: 10px;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 8px;
+  transform: rotate(-0.4deg);
 }
 .three {
   width: 91%;
