--- a/Responsive Web Design Certification/Exercices/Learn CSS Flexbox by Building a Photo Gallery/css/styles.css
+++ b/Responsive Web Design Certification/Exercices/Learn CSS Flexbox by Building a Photo Gallery/css/styles.css
@@ -6,6 +6,14 @@ body {
   background-color: #f5f6f7;
   margin: 0;
 }
+.header {
+  text-transform: uppercase;
+  text-align: center;
+  padding: 32px;
+  background: #0a0a23;
+  color: #fff;
+  border-bottom: 4px solid #fdb347;
+}
 .gallery img {
   width: 100%;
   max-width: 350px;
