--- a/Responsive Web Design Certification/Exercices/Learn CSS Flexbox by Building a Photo Gallery/css/styles.css
+++ b/Responsive Web Design Certification/Exercices/Learn CSS Flexbox by Building a Photo Gallery/css/styles.css
@@ -14,6 +14,9 @@ body {
   color: #fff;
   border-bottom: 4px solid #fdb347;
 }
+.gallery {
+  display: flex;
+}
 .gallery img {
   width: 100%;
   max-width: 350px;
