--- a/Responsive Web Design Certification/Exercices/Learn CSS Flexbox by Building a Photo Gallery/css/styles.css
+++ b/Responsive Web Design Certification/Exercices/Learn CSS Flexbox by Building a Photo Gallery/css/styles.css
@@ -18,6 +18,7 @@ body {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: center;
 }
 .gallery img {
   width: 100%;
