--- a/Responsive Web Design Certification/Exercices/Learn CSS Flexbox by Building a Photo Gallery/css/styles.css
+++ b/Responsive Web Design Certification/Exercices/Learn CSS Flexbox by Building a Photo Gallery/css/styles.css
@@ -19,6 +19,7 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
 }
 .gallery img {
   width: 100%;
