--- a/Responsive Web Design Certification/Exercices/Learn Typography by Building a Nutrition Label/css/style.css
+++ b/Responsive Web Design Certification/Exercices/Learn Typography by Building a Nutrition Label/css/style.css
@@ -14,10 +14,12 @@ body {
   border: 2px solid black;
 }
 h1 {
-  font-weight: 800;
   text-align: center;
   letter-spacing: 0.15px;
   margin: -4px 0 -4px 0;
+}
+.bold {
+  font-weight: 800;
 }
 p {
   margin: 0;
