--- a/Responsive Web Design Certification/Exercices/Learn Typography by Building a Nutrition Label/css/style.css
+++ b/Responsive Web Design Certification/Exercices/Learn Typography by Building a Nutrition Label/css/style.css
@@ -13,7 +13,7 @@ body {
   padding: 0 7px;
   border: 2px solid black;
 }
-h1 {
+header h1 {
   text-align: center;
   letter-spacing: 0.15px;
   margin: -4px 0 -4px 0;
